tests/skip/duplicate-getters-1.stderr
error: encountered duplicate `#[skip(getters)]` attribute for field
 --> $DIR/duplicate-getters-1.rs:5:24
  |
5 |     #[skip(getters)] #[skip(getters)]
  |                        ^^^^

error: duplicate `#[skip(getters)]` here
 --> $DIR/duplicate-getters-1.rs:5:7
  |
5 |     #[skip(getters)] #[skip(getters)]
  |       ^^^^
